2006-02-17  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Test: fast/css/ex-after-font-variant.html

        Reviewed by Darin.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=4227
          The ex unit doesn't work for font-variant: small-caps

        * css/cssstyleselector.cpp:
        (WebCore::CSSStyleSelector::applyDeclarations): Added CSS_PROP_FONT_VARIANT to the properties
        that need to be applied first, since it dirties the font.

2006-02-17  Adele Peterson  <adele@apple.com>

        Reviewed by Beth.

        Adding isEdited/setEdited hooks so onChange will fire for the new text fields.

        * rendering/RenderTextField.cpp:
        (WebCore::m_dirty):
        (WebCore::RenderTextField::updateFromElement): setEdited to false when value attribute has changed.
        (WebCore::RenderTextField::subtreeHasChanged): setEdited to true when anonymous editable div has changed.
        * rendering/RenderTextField.h:
        (WebCore::RenderTextField::isEdited):
        (WebCore::RenderTextField::setEdited):
        (WebCore::RenderTextField::isTextField):

2006-02-17  Vicki Murley <vicki@apple.com>

        Reviewed by Justin.
 
        Get rid of handleFocusOut on text fields and textareas - move this functionality to the place
        where we resign focus on the previous node in setFocusNode.  Add isTextField on RenderObject
        as one way to distinguish from contenteditable elements - Win IE does not fire onChange for 
        contenteditable elements, so we won't either. Also, expose the dirty bit variables previously 
        checked in handleFocusOut methods in isEdited() and setEdited().

        Fixes the following bugs:
        <rdar://problem/4315673> REGRESSION (1.2.2 - 1.3): onChange and onFocus events firing order differs for mouse click and tab (7227)
        <rdar://problem/4447009> for text fields, onChange should fire before onBlur to match Win IE

        Test case is on the way.
